--- a/index.html
+++ b/index.html
@@ -1,1 +1,30 @@
-
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>Practice page</title>
+        <link rel="stylesheet" href="css/main.css">
+    </head>
+    <body background="img/tech.jpg">
+        <div class="nav">
+            <ul>
+                <li><a href="https://kirbygirl.github.io/CSCI225/" target="_blank">Homework site</a></li>
+                <li><a href="https://www.youtube.com/watch?v=_O7G7fdCn0Y" target="_blank">Funny Video</a></li>
+            </ul>
+        </div>
+        <div class="ebn">
+        <div class="day1">
+            <h1 id="h">Some explaining to do.</h1>
+            <p>So, I'm sure you <em>("you" being anyone who may have happened opon this page)</em> are
+            wondering why this page exists. Or, even better, why I - being the srange one I am - 
+        even made it in the first place. The quickest answer is this, I somehow lost all the old files
+    from my first computer science class where I made many old html projects I could include in my 
+portfolio. I have my old Alice projects, but that's a whole other thing.
+<br>Here is the part where I admit I have some very simple html projects that still 
+exist out there, but nothing I would feel like is worth sharing. So here I am, recreating a practice page
+for my portfolio. </p>
+        </div>
+        </div>
+        
+    </body>
+</html>
