--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="css/main.css">
     </head>
     <body background="img/tech.jpg">
-        <div class="nav">
+        <div class="topnav">
             <ul>
                 <li><a href="https://kirbygirl.github.io/CSCI225/" target="_blank">Homework site</a></li>
                 <li><a href="https://www.youtube.com/watch?v=_O7G7fdCn0Y" target="_blank">Funny Video</a></li>
