--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <div class="topnav">
             <ul>
                 <li><a href="https://kirbygirl.github.io/CSCI225/" target="_blank">Homework site</a></li>
-                <li><a href="https://www.youtube.com/watch?v=_O7G7fdCn0Y" target="_blank">Funny Video</a></li>
+                <li><a href="#Funny">Funny Video</a></li>
             </ul>
         </div>
         <div class="ebn">
@@ -23,6 +23,9 @@ portfolio. I have my old Alice projects, but that's a whole other thing.
 <br>Here is the part where I admit I have some very simple html projects that still 
 exist out there, but nothing I would feel like is worth sharing. So here I am, recreating a practice page
 for my portfolio. </p>
+        </div>
+        <div id="Funny">
+            <iframe src="img/vines that cared for me when no one else did.mp4" frameborder="0" height="360" width="586"></iframe>
         </div>
         </div>
         
